--- a/contact-me.html
+++ b/contact-me.html
@@ -8,8 +8,8 @@
     <h1>Personal Details</h1>
     <ul>
       <li>Email: bishtji769@gmail.com</li>
-      <li><a href="https://twitter.com/lm_bisht">Twitter</a></li>
-      <li><a href="https://www.instagram.com/lm_bisht/">Instagram</a></li>
+      <li>Twitter: lm_bisht</li>
+      <li>Instagram: lm_bisht</li>
     </ul>
     <hr>
     <form class="" action="mailto:bishtji769@gmail" method="post" enctype="text/plain">
